vpc.tf
resource "aws_vpc" "avg_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "app-vpc"
  }
}
